--- a/functions/package.json
+++ b/functions/package.json
@@ -1,8 +1,11 @@
+// functions/package.json
 {
   "name": "functions",
   "version": "1.0.0",
   "dependencies": {
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.0",
+    "genkit": "^0.5.0",
+    "@genkit-ai/googleai": "^0.5.0"
   }
 }
